--- a/package.json
+++ b/package.json
@@ -33,6 +33,8 @@
     ]
   },
   "devDependencies": {
+    "autoprefixer": "^10.4.20",
+    "postcss": "^8.5.1",
     "tailwindcss": "^3.4.17",
     "web-vitals": "^4.2.4"
   }
